# lsp-ws-proxy

./: .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml  upload-binaries.yml
src/: client.rs  main.rs
src/api/: files.rs  mod.rs  proxy.rs
src/lsp/: error.rs  mod.rs  notification.rs  request.rs  response.rs  types.rs
src/lsp/ext/: mod.rs  relative_uri.rs
src/lsp/framed/: codec.rs  mod.rs  parser.rs
