[package]
name = "lsp-ws-proxy"
version = "0.4.1"
authors = ["kazk <kazk.dev@gmail.com>"]
edition = "2018"
license = "MIT"
description = "WebSocketify any Language Server"
homepage = "https://github.com/qualified/lsp-ws-proxy"
repository = "https://github.com/qualified/lsp-ws-proxy"
readme = "README.md"
keywords = ["lsp", "websocket"]
categories = ["command-line-utilities"]

[dependencies]
argh = "0.1"
bytes = "1"
env_logger = "0.7"
futures-util = "0.3.15"
log = "0.4.14"
lsp-types = "0.81"
nom = { version = "5.1", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.1"

tokio = { version = "1", features = ["fs", "process", "macros", "rt", "rt-multi-thread", "time"] }
tokio-util = { version = "0.6.0", features = ["codec"] }
warp = { version = "0.3.1", default-features = false, features = ["websocket"] }

[dev-dependencies]

[profile.release]
# Turn Link Time Optimization on to reduce the binary size.
# See https://doc.rust-lang.org/cargo/reference/profiles.html#lto
lto = true

# Strip symbols from the final build (nightly)
# See https://github.com/rust-lang/cargo/issues/3483#issuecomment-631395566
# strip = "symbols"
